Disabled shatterTitle on resolutions lower than 1024 and fixed PageLoader when user was scrolling while the loader was visible

--- a/app/styles/base/base.scss
+++ b/app/styles/base/base.scss
@@ -45,6 +45,7 @@ h3 {
     display: inline-flex;
     align-items: center;
     z-index:1;
+    overflow-wrap: anywhere;
 }
 
 .link .icon {
